added button to take snapshots

--- a/SnapYourColor/index.html
+++ b/SnapYourColor/index.html
@@ -23,7 +23,9 @@
 
 		</div>		
 
+		<button id="button">Take Snapshot</button>
 		<video id="video" width="800" autoplay></video>
+		<canvas id="canvas" width="700"></canvas>
 
 	</div>	
 
