fixed start view

--- a/SnapYourColor/index.html
+++ b/SnapYourColor/index.html
@@ -20,10 +20,14 @@
 		<div id="startView">
 			<div id="startViewContent">
 				<div id="introduction">
-				
+				Welcome to Snap Your Color! </br> ___</br>
+				Press START to capture an image that shows your wanted color. </br>
+				Afterwards you get the RGB and HEX values of your color. </br>
+				You can also change the brightness of the color using the slider below the values. </br>
+				Have fun!
 				</div>
 				<div id="startButton" onclick="showCameraView()">
-					<div id="startButtonText">Start</div>
+					<div id="startButtonText">START</div>
 				</div>	
 			</div>						
 		</div>
