--- a/SnapYourColor/index.html
+++ b/SnapYourColor/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style_mobile.css" media="only screen and (max-width: 480px)">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
-	<title>SnapToColor</title>
+	<title>Snap Your Color</title>
 </head>
 <body>
 
@@ -21,7 +21,7 @@
 			<div id="startViewContent">
 				<div id="introduction">
 				Welcome to Snap Your Color! </br> ___</br>
-				Press START to capture an image that shows your wanted color. </br>
+				Press START to capture an image that shows your desired color. </br>
 				Afterwards you get the RGB and HEX values of your color. </br>
 				You can also change the brightness of the color using the slider below the values. </br>
 				Have fun!
@@ -63,7 +63,7 @@
 		<!-- view to show the camera view and capture images in fullscreen-->
 		<div id="cameraView">
 
-			<video id="video" height="100%" autoplay></video>
+			<video id="video" autoplay></video>
 			<canvas id="canvas"></canvas>
 			
 			<div id="captureImageButton" onclick="captureImage()">
