--- a/SnapYourColor/index.html
+++ b/SnapYourColor/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!--<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">-->
-	<link rel="stylesheet" type="text/css" href="style.css" media="screen">
-	<link rel="stylesheet" type="text/css" href="style_mobile.css" media="only screen and (max-width: 480px)">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<!--<link rel="stylesheet" type="text/css" href="style.css" media="screen">-->
+	<link rel="stylesheet" type="text/css" href="style_mobile.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 	<title>Snap Your Color</title>
