--- a/SnapYourColor/index.html
+++ b/SnapYourColor/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, user-scalable=no" />
 	<!--<link rel="stylesheet" type="text/css" href="style.css" media="screen">-->
 	<link rel="stylesheet" type="text/css" href="style_mobile.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
