--- a/SnapYourColor/index.html
+++ b/SnapYourColor/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-	<!--<link rel="stylesheet" type="text/css" href="style.css" media="screen">-->
-	<link rel="stylesheet" type="text/css" href="style_mobile.css">
+	<link rel="stylesheet" type="text/css" href="style.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="style_mobile.css" media="only screen and (max-width: 480px)">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 	<title>Snap Your Color</title>
