--- a/SnapYourColor/index.html
+++ b/SnapYourColor/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script type="text/javascript" src="https://wurfl.io/wurfl.js"></script>
 		<script type="text/javascript" src="script.js"></script>
 		<title>Snap Your Color</title>
 	</head>
