added landscape not supported text for mobile version

--- a/SnapYourColor/index.html
+++ b/SnapYourColor/index.html
@@ -53,7 +53,10 @@
 						<input id="slider" type="range" min="1" max="1000" value="500">
 					</div>
 				</div>			
-			</div>	
+			</div>
+
+			<!-- info for landscape use -->
+			<div id="landscapeInfoText">Landscape mode is not supported, please use portrait mode.</div>	
 
 		</div>
 	</body>
