--- a/SnapYourColor/index.html
+++ b/SnapYourColor/index.html
@@ -44,10 +44,10 @@
 					<div id="resultColorStore">255_255_0</div>
 					<div id="resultColorValues" class="text-input">
 						<label for="rgb" id="rgbLabel"><span class="label">RGB</span></label>
-						<input type="text" id="rgbOutput" name="rgb" placeholder="255 255 255">
+						<input type="text" id="rgbOutput" name="rgb" placeholder="255 255 255" readonly>
 
 						<label for="hex" id="hexLabel"><span class="label">HEX</span></label>
-						<input type="text" id="hexOutput" name="hex" placeholder="#000000">
+						<input type="text" id="hexOutput" name="hex" placeholder="#000000" readonly>
 					</div>
 					<div id="brightnessSlider">
 						<input id="slider" type="range" min="1" max="1000" value="500">
